alignment fixes

--- a/front/mela/src/app/campaign-page/campaign-page.component.css
+++ b/front/mela/src/app/campaign-page/campaign-page.component.css
@@ -1,3 +1,10 @@
+.main-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+}
+
 .container{
   display: flex;
   flex-direction: column;
